
This file defines the changes made to Via - Virtual teaching

last update 01/05/2015 (2015050100)
- new tables were created for storing API information to call Via less often.
- functions were added in the cron to call these new functions at varying intervals 
and may be modified depending on the needs of the client.
- a new option was added in the activity creation to chose the type of acivity that is to be created; 
Via 6 or the most recent version of Via
- a new option was added in the activity creation to chose whether or not to display the user list in a webinare.
- an email will be sent automatically to the user who exported a recording once the export is ready to be downloaded.
- certain moodle functions were taken out of the code in order to be called depending on the moodle version, 
this will help have less plugin versions in the long term.

last update 20/01/2015 (2015012004)
- Indexes were corrected in the install page.
- Resizeable was added to the view.via openpopup parameters.
- Access to the activity for admins was modified.

last update 20/01/2015 (2015012002)
- Indexes were add to the via tables to increase efficiency.

last update 20/01/2015 (2015012001)

- New pagination on the via details page, only the first 50 users will be displayed.
- Removed the setting in the plugins parameters to permit sending reminders from Via. They are always send through moodle.
- We have modified how users are synchronized with Via to reduce the amount of calls made to via.
-- Only the first 50 users will be synched.
--- on creation on an activity or on modification.
-- the 50 displayed in the details page will be synched
-- the presence status will be calculated on the display of the presence report.
-- cron - new enrollements will be added to the via_pariticipants table but not added to via
-- cron - old enrollements will be removed from the via_participants table and from via, only if they had been synched.